<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_yellow"
    android:padding="30dp"
    android:transitionName="transition_signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/reg2BackButt"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/back_icon" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/roboto_black"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:transitionName="transition_title_text" />


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_first_name"
                android:textColorHint="@color/black_overlay"
                app:boxStrokeColor="@color/flour"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black_overlay"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/field_full_name_icon"
                app:startIconTint="@color/black_overlay">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_last_name"
                android:textColorHint="@color/black_overlay"
                app:boxStrokeColor="@color/flour"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black_overlay"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/field_full_name_icon"
                app:startIconTint="@color/black_overlay">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:textColorHint="@color/black_overlay"
                app:boxStrokeColor="@color/flour"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black_overlay"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/field_email_icon"
                app:startIconTint="@color/black_overlay">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:textColorHint="@color/black_overlay"
                app:boxStrokeColor="@color/flour"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black_overlay"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="false"
                app:passwordToggleTint="@color/black_overlay"
                app:startIconDrawable="@drawable/field_password_icon"
                app:startIconTint="@color/black_overlay">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_address"
                android:textColorHint="@color/black_overlay"
                app:boxStrokeColor="@color/flour"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/field_full_name_icon"
                app:startIconTint="@color/black_overlay">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPostalAddress"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/whyJacobButt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/black"
                android:elevation="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/next"
                android:textColor="@color/white"
                android:transitionName="transition_next_btn"
                app:backgroundTint="@color/black"
                app:iconTint="#000000" />

            <Button
                android:id="@+id/reg2LoginButt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:elevation="5dp"
                android:fontFamily="@font/roboto"
                android:onClick="callLoginFromSignUp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:transitionName="transition_login_btn" />


        </LinearLayout>


    </LinearLayout>


</ScrollView>